--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -3,3 +3,7 @@
 /api/tezos-snoop.html
 /api/tezos-codec.html
 /api/tezos-node-run.txt
+tezos-baker-*.html
+tezos-accuser-*.html
+tezos-endorser-*.html
+tezos-client-*.html
