--- a/src/lib_rpc_http/tezos-rpc-http-server.opam
+++ b/src/lib_rpc_http/tezos-rpc-http-server.opam
@@ -10,6 +10,7 @@ depends: [
   "tezos-base"
   "tezos-rpc-http"
   "resto-cohttp-server" { >= "0.6" & < "0.7" }
+  "resto-acl" { >= "0.6" & < "0.7" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
