--- a/src/lib_storage/tezos-storage.opam
+++ b/src/lib_storage/tezos-storage.opam
@@ -10,7 +10,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-base"
   "tezos-lmdb"
-  "irmin" { >= "2.2.0" }
+  "irmin" { >= "2.2.0" & < "2.3.0" }
   "irmin-pack"
   "digestif" {>= "0.7.3"}
   "tezos-shell-services"
