--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -100,6 +100,7 @@ integration:sandboxes:daemons-upgrade:
     # Give access to the Python dependencies/executables
     - . $HOME/.venv/bin/activate
     - mkdir tests_python/tmp
+    - touch tests_python/tmp/empty__to_avoid_glob_failing
     - cd tests_python
   after_script:
     - tail -n +1 tests_python/tmp/*
@@ -112,313 +113,313 @@ integration:sandboxes:daemons-upgrade:
 integration:007_fast:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007 -k "not slow" -s --log-dir=tmp
+    - poetry run pytest tests_007 -k "not slow" -s --log-dir=tmp 2&>1 | tee tmp/007_fast.out | tail
   stage: test
 
 integration:007_baker_endorser:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_baker_endorser.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_baker_endorser.py -s --log-dir=tmp 2>&1 | tee tmp/007_baker_endorser.out | tail
   stage: test
 
 integration:007_bootstrap:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_bootstrap.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_bootstrap.py -s --log-dir=tmp 2>&1 | tee tmp/007_bootstrap.out | tail
   stage: test
 
 integration:007_contract:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_contract.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract.py -s --log-dir=tmp 2>&1 | tee tmp/007_contract.out | tail
   stage: test
 
 integration:007_contract_annotations:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_contract_annotations.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_annotations.py -s --log-dir=tmp 2>&1 | tee tmp/007_contract_annotations.out | tail
   stage: test
 
 integration:007_contract_macros:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_contract_macros.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_macros.py -s --log-dir=tmp 2>&1 | tee tmp/007_contract_macros.out | tail
   stage: test
 
 integration:007_contract_onchain_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_contract_onchain_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_onchain_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/007_contract_onchain_opcodes.out | tail
   stage: test
 
 integration:007_contract_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_contract_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/007_contract_opcodes.out | tail
   stage: test
 
 integration:007_forge_block:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_forge_block.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_forge_block.py -s --log-dir=tmp 2>&1 | tee tmp/007_forge_block.out | tail
   stage: test
 
 integration:007_many_bakers:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_many_bakers.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_many_bakers.py -s --log-dir=tmp 2>&1 | tee tmp/007_many_bakers.out | tail
   stage: test
 
 integration:007_many_nodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_many_nodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_many_nodes.py -s --log-dir=tmp 2>&1 | tee tmp/007_many_nodes.out | tail
   stage: test
 
 integration:007_mempool:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_mempool.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_mempool.py -s --log-dir=tmp 2>&1 | tee tmp/007_mempool.out | tail
   stage: test
 
 integration:007_multinode_snapshot:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_multinode_snapshot.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multinode_snapshot.py -s --log-dir=tmp 2>&1 | tee tmp/007_multinode_snapshot.out | tail
   stage: test
 
 integration:007_multinode_storage_reconstruction:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multinode_storage_reconstruction.py -s --log-dir=tmp 2>&1 | tee tmp/007_multinode_storage_reconstruction.out | tail
   stage: test
 
 integration:007_proxy:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_proxy.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_proxy.py -s --log-dir=tmp 2>&1 | tee tmp/007_proxy.out | tail
   stage: test
 
 integration:007_rpc:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_rpc.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_rpc.py -s --log-dir=tmp 2>&1 | tee tmp/007_rpc.out | tail
   stage: test
 
 integration:008_fast:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008 -k "not slow" -s --log-dir=tmp
+    - poetry run pytest tests_008 -k "not slow" -s --log-dir=tmp 2&>1 | tee tmp/008_fast.out | tail
   stage: test
 
 integration:008_baker_endorser:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_baker_endorser.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_baker_endorser.py -s --log-dir=tmp 2>&1 | tee tmp/008_baker_endorser.out | tail
   stage: test
 
 integration:008_bootstrap:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_bootstrap.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_bootstrap.py -s --log-dir=tmp 2>&1 | tee tmp/008_bootstrap.out | tail
   stage: test
 
 integration:008_contract:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_contract.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_contract.py -s --log-dir=tmp 2>&1 | tee tmp/008_contract.out | tail
   stage: test
 
 integration:008_contract_annotations:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_contract_annotations.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_contract_annotations.py -s --log-dir=tmp 2>&1 | tee tmp/008_contract_annotations.out | tail
   stage: test
 
 integration:008_contract_macros:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_contract_macros.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_contract_macros.py -s --log-dir=tmp 2>&1 | tee tmp/008_contract_macros.out | tail
   stage: test
 
 integration:008_contract_onchain_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_contract_onchain_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_contract_onchain_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/008_contract_onchain_opcodes.out | tail
   stage: test
 
 integration:008_contract_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_contract_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_contract_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/008_contract_opcodes.out | tail
   stage: test
 
 integration:008_forge_block:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_forge_block.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_forge_block.py -s --log-dir=tmp 2>&1 | tee tmp/008_forge_block.out | tail
   stage: test
 
 integration:008_many_bakers:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_many_bakers.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_many_bakers.py -s --log-dir=tmp 2>&1 | tee tmp/008_many_bakers.out | tail
   stage: test
 
 integration:008_many_nodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_many_nodes.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_many_nodes.py -s --log-dir=tmp 2>&1 | tee tmp/008_many_nodes.out | tail
   stage: test
 
 integration:008_mempool:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_mempool.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_mempool.py -s --log-dir=tmp 2>&1 | tee tmp/008_mempool.out | tail
   stage: test
 
 integration:008_multinode_snapshot:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_multinode_snapshot.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_multinode_snapshot.py -s --log-dir=tmp 2>&1 | tee tmp/008_multinode_snapshot.out | tail
   stage: test
 
 integration:008_multinode_storage_reconstruction:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_multinode_storage_reconstruction.py -s --log-dir=tmp 2>&1 | tee tmp/008_multinode_storage_reconstruction.out | tail
   stage: test
 
 integration:008_rpc:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_rpc.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_rpc.py -s --log-dir=tmp 2>&1 | tee tmp/008_rpc.out | tail
   stage: test
 
 integration:008_voting_full:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_008/test_voting_full.py -s --log-dir=tmp
+    - poetry run pytest tests_008/test_voting_full.py -s --log-dir=tmp 2>&1 | tee tmp/008_voting_full.out | tail
   stage: test
 
 integration:alpha_fast:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha -k "not slow" -s --log-dir=tmp
+    - poetry run pytest tests_alpha -k "not slow" -s --log-dir=tmp 2&>1 | tee tmp/alpha_fast.out | tail
   stage: test
 
 integration:alpha_baker_endorser:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_baker_endorser.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_baker_endorser.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_baker_endorser.out | tail
   stage: test
 
 integration:alpha_block_times_ideal_scenario:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_block_times_ideal_scenario.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_block_times_ideal_scenario.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_block_times_ideal_scenario.out | tail
   stage: test
 
 integration:alpha_bootstrap:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_bootstrap.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_bootstrap.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_bootstrap.out | tail
   stage: test
 
 integration:alpha_contract:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_contract.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_contract.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_contract.out | tail
   stage: test
 
 integration:alpha_contract_annotations:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_contract_annotations.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_contract_annotations.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_contract_annotations.out | tail
   stage: test
 
 integration:alpha_contract_macros:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_contract_macros.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_contract_macros.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_contract_macros.out | tail
   stage: test
 
 integration:alpha_contract_onchain_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_contract_onchain_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_contract_onchain_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_contract_onchain_opcodes.out | tail
   stage: test
 
 integration:alpha_contract_opcodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_contract_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_contract_opcodes.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_contract_opcodes.out | tail
   stage: test
 
 integration:alpha_forge_block:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_forge_block.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_forge_block.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_forge_block.out | tail
   stage: test
 
 integration:alpha_many_bakers:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_many_bakers.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_many_bakers.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_many_bakers.out | tail
   stage: test
 
 integration:alpha_many_nodes:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_many_nodes.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_many_nodes.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_many_nodes.out | tail
   stage: test
 
 integration:alpha_mempool:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_mempool.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_mempool.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_mempool.out | tail
   stage: test
 
 integration:alpha_multinode_snapshot:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_multinode_snapshot.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_multinode_snapshot.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_multinode_snapshot.out | tail
   stage: test
 
 integration:alpha_multinode_storage_reconstruction:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_multinode_storage_reconstruction.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_multinode_storage_reconstruction.out | tail
   stage: test
 
 integration:alpha_nonce_seed_revelation:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_nonce_seed_revelation.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_nonce_seed_revelation.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_nonce_seed_revelation.out | tail
   stage: test
 
 integration:alpha_perf_endorsement:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_perf_endorsement.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_perf_endorsement.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_perf_endorsement.out | tail
   stage: test
 
 integration:alpha_proxy:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_proxy.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_proxy.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_proxy.out | tail
   stage: test
 
 integration:alpha_rpc:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_rpc.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_rpc.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_rpc.out | tail
   stage: test
 
 integration:alpha_voting_full:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_alpha/test_voting_full.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_voting_full.py -s --log-dir=tmp 2>&1 | tee tmp/alpha_voting_full.out | tail
   stage: test
 
 integration:examples:
