--- a/src/lib_sapling/dune
+++ b/src/lib_sapling/dune
@@ -15,7 +15,7 @@
  (flags (:standard -open Tezos_stdlib
                    -open Tezos_crypto
                    -open Tezos_error_monad
-                   -open Tezos_lwt_result_stdlib.Lwtreslib)))
+                   -open Tezos_error_monad.TzLwtreslib)))
 
 (rule
  (alias runtest_lint)
