--- a/src/lib_signer_backends/test/dune
+++ b/src/lib_signer_backends/test/dune
@@ -4,7 +4,7 @@
             alcotest-lwt)
  (flags (:standard -open Tezos_error_monad
                    -open Tezos_stdlib
-                   -open Tezos_lwt_result_stdlib.Lwtreslib
+                   -open Tezos_error_monad.TzLwtreslib
                    -open Tezos_crypto
                    -open Tezos_client_base
                    -open Tezos_signer_backends)))
