--- a/src/lib_stdlib_unix/dune
+++ b/src/lib_stdlib_unix/dune
@@ -2,7 +2,7 @@
  (name tezos_stdlib_unix)
  (public_name tezos-stdlib-unix)
  (flags (:standard -open Tezos_error_monad
-                   -open Tezos_lwt_result_stdlib.Lwtreslib
+                   -open Tezos_error_monad.TzLwtreslib
                    -open Tezos_event_logging
                    -open Tezos_stdlib
                    -open Data_encoding))
