--- a/src/lib_lwt_result_stdlib/bare/sigs/dune
+++ b/src/lib_lwt_result_stdlib/bare/sigs/dune
@@ -1,7 +1,7 @@
 (library
  (name bare_sigs)
  (public_name tezos-lwt-result-stdlib.bare.sigs)
- (libraries lwt))
+ (libraries lwt tezos-lwt-result-stdlib.bare.sigs.sigs))
 
 (rule
  (alias runtest_lint)
