--- a/src/lib_shell_benchmarks/tezos-shell-benchmarks.opam
+++ b/src/lib_shell_benchmarks/tezos-shell-benchmarks.opam
@@ -12,6 +12,7 @@ depends: [
   "tezos-benchmark"
   "tezos-storage"
   "tezos-shell-context"
+  "tezos-micheline"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
