--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -104,6 +104,10 @@ integration:sandboxes:daemons-upgrade:
     - cd tests_python
   after_script:
     - tail -n +1 tests_python/tmp/*
+  artifacts:
+    paths:
+      - tests_python/tmp/
+    expire_in: 7 day
   # python scripts don't need the _build directory
   # but only the binaries in the artifacts
   cache: {}
