--- a/.gitlab/ci/publish.yml
+++ b/.gitlab/ci/publish.yml
@@ -184,7 +184,7 @@ publish:doc:
   script:
     - make -C docs all
     - git clone --depth 5 git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
-    - rsync --recursive --links --perms --delete --verbose
+    - rsync --recursive --links --perms --delete
         --exclude=.doctrees --exclude={{main,alpha,zero}net,master}/index.html
         docs/_build/ gitlab.io/public/
     - cd gitlab.io
