--- a/test/dune
+++ b/test/dune
@@ -1,6 +1,7 @@
 (executables
  (names test test_generated test_legacy_compatibility test_json_stream
-   test_json_stream_sizes test_classifiers bench_data_encoding)
+   test_json_stream_sizes test_classifiers bench_data_encoding
+   test_sub_string)
  (libraries data_encoding zarith alcotest crowbar)
  (flags :standard))
 
@@ -41,6 +42,11 @@
   (run %{exe:test_classifiers.exe})))
 
 (alias
+ (name runtest_test_sub_string)
+ (action
+  (run %{exe:test_sub_string.exe})))
+
+(alias
  (name runtest)
  (deps
   (alias runtest_test)
@@ -48,7 +54,8 @@
   (alias runtest_test_generated)
   (alias runtest_test_json_stream)
   (alias runtest_test_json_stream_sizes)
-  (alias runtest_test_classifiers)))
+  (alias runtest_test_classifiers)
+  (alias runtest_test_sub_string)))
 
 (alias
  (name run_bench)
