CI: always generate log artefact

--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -108,6 +108,7 @@ integration:sandboxes:daemons-upgrade:
     paths:
       - tests_python/tmp/
     expire_in: 7 day
+    when: always
   # python scripts don't need the _build directory
   # but only the binaries in the artifacts
   cache: {}
