--- a/src/lib_storage/memory/dune
+++ b/src/lib_storage/memory/dune
@@ -2,7 +2,7 @@
  (name tezos_storage_memory)
  (public_name tezos-storage.memory)
  (libraries tezos-base
-            irmin-mem
+            irmin.mem
             tezos-storage.sigs
             tezos-storage.encoding
             tezos-storage.helpers)
