--- a/src/lib_lwt_result_stdlib/examples/traces/dune
+++ b/src/lib_lwt_result_stdlib/examples/traces/dune
@@ -1,6 +1,6 @@
 (library
  (name traces)
- (public_name tezos-lwt-result-stdlib.traces)
+ (public_name tezos-lwt-result-stdlib.examples.traces)
  (libraries lwt tezos-lwt-result-stdlib.bare.structs tezos-lwt-result-stdlib.traced.sigs))
 
 (rule
