--- a/src/lib_lwt_result_stdlib/test/dune
+++ b/src/lib_lwt_result_stdlib/test/dune
@@ -9,7 +9,7 @@
  )
  (libraries
             tezos-lwt-result-stdlib
-            tezos-lwt-result-stdlib.traces
+            tezos-lwt-result-stdlib.examples.traces
             lwt.unix
             alcotest-lwt
             crowbar)
