--- a/docs/doc_gen/dune
+++ b/docs/doc_gen/dune
@@ -7,6 +7,7 @@
             tezos-protocol-updater
             tezos-embedded-protocol-007-PsDELPH1
             tezos-embedded-protocol-008-PtEdo2Zk
+            tezos-embedded-protocol-009-PsFLoren
             tezos-embedded-protocol-alpha
             re)
  (flags (:standard -open Tezos_base__TzPervasives
