Doc: Add Florence with BA

--- a/docs/doc_gen/dune
+++ b/docs/doc_gen/dune
@@ -8,6 +8,7 @@
             tezos-embedded-protocol-007-PsDELPH1
             tezos-embedded-protocol-008-PtEdo2Zk
             tezos-embedded-protocol-009-PsFLoren
+            tezos-embedded-protocol-009-PsFLorBA
             tezos-embedded-protocol-alpha
             re)
  (flags (:standard -open Tezos_base__TzPervasives
