--- a/tests_python/pyproject.toml
+++ b/tests_python/pyproject.toml
@@ -21,7 +21,10 @@ python = "~3.8"
 
 base58check = "1.0.2"
 ed25519 = "1.4"
-mypy = "*"
+# Set to 0.790 because the tests replication give duplicated modules errors with
+# mypy >= 0.8.
+# Replace with `mypy = "*"` when the tests have been refactorized.
+mypy = "0.790"
 mypy-extensions = "*"
 pyblake2 = "1.1.2"
 pycryptodome = "3.9.7"
