Docs: Add a sanity check for protocol documentation
Signed-off-by: Yann Regis-Gianas <yann@nomadic-labs.com>

--- a/.gitlab/ci/doc.yml
+++ b/.gitlab/ci/doc.yml
@@ -35,7 +35,8 @@ documentation:linkcheck:
         - /docs
       when: on_success
   script:
-    - make -C docs redirectcheck linkcheck
+    - make -C docs redirectcheck
+    - make -C docs linkcheck 
+    - make -C docs sanitycheck
   allow_failure: true
   interruptible: true
-
