Lwtreslib: rename sigs/sigs/ into functor_outputs/

--- a/src/lib_lwt_result_stdlib/bare/functor_outputs/dune
+++ b/src/lib_lwt_result_stdlib/bare/functor_outputs/dune
@@ -1,6 +1,6 @@
 (library
- (name bare_sigs_sigs)
- (public_name tezos-lwt-result-stdlib.bare.sigs.sigs)
+ (name bare_functor_outputs)
+ (public_name tezos-lwt-result-stdlib.bare.functor-outputs)
  (libraries lwt))
 
 (rule
