--- a/src/lib_lwt_result_stdlib/traced/sigs/dune
+++ b/src/lib_lwt_result_stdlib/traced/sigs/dune
@@ -1,7 +1,7 @@
 (library
  (name traced_sigs)
  (public_name tezos-lwt-result-stdlib.traced.sigs)
- (libraries lwt tezos-lwt-result-stdlib.bare.sigs tezos-lwt-result-stdlib.traced.sigs.sigs))
+ (libraries lwt tezos-lwt-result-stdlib.bare.sigs tezos-lwt-result-stdlib.traced.functor-outputs))
 
 (rule
  (alias runtest_lint)
